# DLP-Server

./: .gitignore  README.md  db.py  dlp.py  icapserver.py  languages-config.yml  pyicap.py  pyproject.toml  requirements.txt  setup.py  testFile.txt
chatpy/: sender.py  server.py
file_operations/: file_operations.py
