[project]
requires = ["pip"]
name = "dlp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "pdfminer-six>=20240706",
    "pip>=25.0",
    "presidio-analyzer>=2.2.357",
    "presidio-anonymizer>=2.2.357",
    "psycopg2>=2.9.10",
    "pymupdf>=1.25.2",
    "python-docx>=1.1.2",
]
